<resources>
    <string name="app_name">Crypto Price Alert</string>
    <string name="web_client_id">
        510663096013-gssqgfii1kqhesvrm120q8h6u8l2ficf.apps.googleusercontent.com</string>
    <string name="watchlist">Watchlist</string>
    <string name="cryptocurrency">Cryptocurrency</string>
    <string name="popular">Popular</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    <string name="cryptocurrency_logo">Cryptocurrency logo</string>
    <string name="price_question">Get notified when the price reaches:</string>
    <string name="target_price_notification_message">
        You will receive a notification when the price</string>
    <string name="target_price_delete_message">
        You can remove the notification by swiping the unnecessary position to the left</string>
    <string name="target_price_increase">increases to:</string>
    <string name="or">or</string>
    <string name="target_price_decrease">decreases to:</string>
    <string name="or_target_price_decrease">Or decreases to:</string>
    <string name="description_button_add">
        Button for setting a price, upon reaching which an alert will be sent</string>
    <string name="usd">USD</string>
    <string name="account_picture">Profile picture</string>
    <string name="add_coin">Add coin to watchlist</string>
    <string name="log_out">Log out</string>
    <string name="search">Find a coin</string>
    <string name="nothing"></string>
    <string name="search_hint">Enter the name of a coin...</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="_5_years">5years</string>
    <string name="all">All</string>
    <string name="logo_alert">Alert logo</string>
    <string name="to_symbol">/USD</string>
    <string name="bitcoin">Bitcoin</string>
    <string name="price">$46323.12</string>
    <string name="price_with_currency">$%1$s</string>
    <string name="btc">BTC</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="add">ADD</string>
    <string name="image_for_news">Image for news</string>
    <string name="picture_on_the_registration_screen">picture on the registration screen</string>
    <string name="sign_up">Sign up</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="continue_register">Continue</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="anonymous_login">Anonymous login</string>
    <string name="sign_up_by_email">Sign up by Email</string>
    <string name="don_t_have_account_yet">Don\'t have account yet?</string>
    <string name="repeat_password">Repeat password</string>
    <string name="exit">Exit</string>
    <string name="anonymous">Anonymous</string>
    <string name="watch_list_hint">Here will be a list of coins that you choose for observation</string>
    <string name="watch_list_delete_hint">Swipe left to delete coin</string>
    <string name="Register_message">Register to be able to recover your account and access your watchlist from other devices</string>
</resources>